chore: Update root CSS to prevent margin collapsing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,11 @@ body,
   padding: 0;
 }
 
+#root {
+  /* prevent margin collapsing */
+  display: flow-root;
+}
+
 *,
 *::before,
 *::after {
